# bedrock_agent

./: README.md  pyproject.toml
config/: coding_agent.yaml  research_agent.yaml
src/bedrock_agent/: __init__.py  agent.py  cli.py  config.py  normalizer.py
src/bedrock_agent/tools/: __init__.py  filesystem.py  research.py
