[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-agent-cli"
version = "0.1.0"
description = "A CLI application for running agentic workflows using AWS Bedrock models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=14.0.0",
    "requests>=2.31.0",
    "pypdf>=4.0.0",
    "ddgs>=9.10.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
bedrock-agent = "bedrock_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
